@@ -317,8 +317,6 @@ test-x: $(bin_PROGRAMS) textbox_test
 	$(top_srcdir)/test/run_test.sh 215 $(top_srcdir)/test/run_regex_test.sh $(top_builddir)
 	echo "Test dmenu glob"
 	$(top_srcdir)/test/run_test.sh 216 $(top_srcdir)/test/run_glob_test.sh $(top_builddir)
-	echo "Test dmenu fuzzy"
-	$(top_srcdir)/test/run_test.sh 217 $(top_srcdir)/test/run_fuzzy_test.sh $(top_builddir)
 	echo "Test config dump"
 	$(top_srcdir)/test/run_test.sh 218 $(top_srcdir)/test/xr_config_test.sh $(top_builddir) $(top_srcdir)
 	echo "Test issue 333"
