@@ -274,12 +274,6 @@ Start in case sensitive mode\.
 Cycle through the results list\. Default is \'true\'\.
 .
 .P
-\fB\-fuzzy\fR
-.
-.P
-Enable experimental fuzzy matching\.
-.
-.P
 \fB\-filter\fR \fIfilter\fR
 .
 .P
