@@ -139,8 +139,6 @@ static XrmOption xrmOptions[] = {
       "Parse known_hosts file for ssh mode"                                 },
     { xrm_String,  "combi-modi",        { .str  = &config.combi_modi         }, NULL,
       "Set the modi to combine in combi mode"                               },
-    { xrm_Boolean, "fuzzy",             { .num  = &config.fuzzy              }, NULL,
-      "Do a more fuzzy matching"                                            },
     { xrm_Boolean, "glob",              { .num  = &config.glob               }, NULL,
       "Use glob matching"                                                   },
     { xrm_Boolean, "regex",             { .num  = &config.regex              }, NULL,
